--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       href="./images/favicon-32x32.png"
     />
 
-    <title>Vinay Parit | Four card feature section</title>
+    <title>Akash Agasur | Four card feature section</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -35,7 +35,7 @@
         <div class="box1">
           <h2>Supervisor</h2>
           <p>
-            <img src="/four-card-feature-section-master/images/icon-supervisor.svg" alt="Supervisor" />
+            <img src="/icon-supervisor.svg" alt="Supervisor" />
             Monitors activity to ide ntify project <br />
             roadblocks
           </p>
@@ -44,7 +44,7 @@
         <div class="box2">
           <h2>Team Builder</h2>
           <p>
-            <img src="/four-card-feature-section-master/images/icon-team-builder.svg" alt="team-builder" />
+            <img src="/icon-team-builder.svg" alt="team-builder" />
             Scans our talent network to create the <br />optimal team for your
             project
           </p>
@@ -53,14 +53,14 @@
         <div class="box3">
           <h2>Karma</h2>
           <p>
-            <img src="/four-card-feature-section-master/images/icon-karma.svg" alt="Karma" />
+            <img src="/icon-karma.svg" alt="Karma" />
             Regularly evaluates our talent to ensure <br />quality
           </p>
         </div>
         <div class="box4">
           <h2>Calculator</h2>
           <p>
-            <img src="/four-card-feature-section-master/images/icon-calculator.svg" alt="Calculator" />
+            <img src="/icon-calculator.svg" alt="Calculator" />
             Uses data from past projects to provide <br />better delivery
             estimates
           </p>
